fix: enable HighContrast mode

--- a/src/app/shop/shop.component.scss
+++ b/src/app/shop/shop.component.scss
@@ -16,6 +16,7 @@
 @use '@angular/material' as mat;
 
 // TODO: #12. Enable HighContrast mode
+@use '@angular/cdk';
 
 :host {
   display: flex;
@@ -61,45 +62,53 @@
     .fillings {
       flex-grow: 1;
 
-      // TODO: #7. Create selectable controls with Angular Material // fixed
+      // TODO: #7. Create selectable controls with Angular Material // fixed    
     }
 
-    .quantity {
-      flex-grow: 3;
+      .quantity {
+        flex-grow: 3;
+      }
+
+      .color {
+        flex-grow: 2;
+        margin: 0 0 10px 0;
+      }
     }
 
-    .color {
-      flex-grow: 2;
-      margin: 0 0 10px 0;
+    .purchase-button {
+      width: 100%;
+      padding: 10px 0;
+      border-radius: 5px;
+      background-color: mat.get-color-from-palette(mat.$pink-palette, A100);
+
+      // TODO: #12. Enable HighContrast mode
+      @include cdk.high-contrast() {
+        outline: solid 1px;
+        background-color: mat.get-color-from-palette(mat.$pink-palette, 50);
+      }
+
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: 12px;
+
+      h3 {
+        margin: 16px 0 16px;
+      }
     }
   }
 
-  .purchase-button {
-    width: 100%;
-    padding: 10px 0;
-    border-radius: 5px;
-    background-color: mat.get-color-from-palette(mat.$pink-palette, A100);
+  :host-context(.dark-theme) {
+    .dumpling-customizations .selection-card {
+      background-color: mat.get-color-from-palette(mat.$indigo-palette, 400);
+    }
 
-    // TODO: #12. Enable HighContrast mode
+    .purchase-button {
+      background-color: mat.get-color-from-palette(mat.$light-green-palette, A100);
 
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 12px;
-
-    h3 {
-      margin: 16px 0 16px;
+      // TODO: #12. Enable HighContrast mode
+      @include cdk.high-contrast() {
+        outline: solid 1px;
+        background-color: mat.get-color-from-palette(mat.$light-green-palette, 50);
+      }
     }
   }
-}
-
-:host-context(.dark-theme) {
-  .dumpling-customizations .selection-card {
-    background-color: mat.get-color-from-palette(mat.$indigo-palette, 400);
-  }
-
-  .purchase-button {
-    background-color: mat.get-color-from-palette(mat.$light-green-palette, A100);
-
-    // TODO: #12. Enable HighContrast mode
-  }
-}
